src/main/metadata/objects/Account_Field_History_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Id__c</fullName>
        <label>Account Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Id__c</fullName>
        <label>Changed By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastest_Consent_Date__c</fullName>
        <label>Latest Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Agreement__c</fullName>
        <label>Personal Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Data_Source__c</fullName>
        <label>System Data Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Consent_Date__c</fullName>
        <label>Updated Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updated_Consent_User__c</fullName>
        <label>Updated Consent User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Organization__c</fullName>
        <label>User Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Field History Tracker</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Field History Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Field History Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>